<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="wrap_content" 
android:layout_height="wrap_content"
>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="wrap_content" 
android:layout_height="wrap_content"
>
<TextView 
android:text="@string/add_profile" 
android:textColor="#ff6600" 
android:textSize="16pt" 
android:layout_height="wrap_content" 
android:id="@+id/AddProfileTitle" 
android:layout_width="fill_parent"/>
<TextView 
android:layout_below="@+id/AddProfileTitle" 
android:text="@string/AddDayInfoTXT" 
android:layout_height="wrap_content" 
android:id="@+id/AddDayInfoTXT" 
android:layout_width="wrap_content"/>
<Button 
android:text="@string/addDay" 
android:id="@+id/AddDayBTN" 
android:layout_width="wrap_content" 
android:layout_height="wrap_content" 
android:layout_below="@+id/AddDayInfoTXT"/>
<TextView 
android:layout_toRightOf="@+id/AddDayBTN" 
android:layout_below="@+id/AddDayInfoTXT" 
android:layout_width="wrap_content" 
android:layout_height="wrap_content" 
android:textSize="9pt" 
android:paddingLeft="30dp" 
android:textColor="#ff6600" 
android:text="@string/addDay" 
android:id="@+id/AddDayTXT"/>
<TextView 
android:text="@string/startTimeInfo" 
android:layout_height="wrap_content" 
android:id="@+id/StartTimeInfoTXT" 
android:layout_below="@+id/AddDayBTN" 
android:layout_width="wrap_content"/>
<Button 
android:layout_height="wrap_content" 
android:layout_below="@+id/StartTimeInfoTXT" 
android:layout_width="wrap_content" 
android:id="@+id/StartTimeBTN" 
android:text="@string/startTime"/>
<TextView 
android:text="@string/startTime" 
android:textSize="9pt" 
android:paddingLeft="10dp" 
android:textColor="#ff6600" 
android:layout_height="wrap_content" 
android:id="@+id/StartTimeTXT" 
android:layout_below="@+id/StartTimeInfoTXT" 
android:layout_width="wrap_content" 
android:layout_toRightOf="@+id/StartTimeBTN"/>
<TextView 
android:text="@string/endTimeInfo" 
android:layout_height="wrap_content" 
android:id="@+id/EndTimeInfoTXT" 
android:layout_below="@+id/StartTimeBTN" 
android:layout_width="wrap_content"/>
<Button 
android:layout_height="wrap_content" 
android:layout_below="@+id/EndTimeInfoTXT" 
android:layout_width="wrap_content" 
android:id="@+id/EndTimeBTN" 
android:text="@string/endTime"/>
<TextView 
android:text="@string/endTime" 
android:textSize="9pt" 
android:paddingLeft="10dp" 
android:textColor="#ff6600" 
android:layout_height="wrap_content" 
android:id="@+id/EndTimeTXT" 
android:layout_below="@+id/EndTimeInfoTXT" 
android:layout_width="wrap_content" 
android:layout_toRightOf="@+id/EndTimeBTN"/>
<TextView 
android:text="@string/saveInfo" 
android:layout_height="wrap_content" 
android:id="@+id/SaveInfoTXT" 
android:layout_below="@+id/EndTimeBTN" 
android:layout_width="wrap_content"/>
<Button 
android:layout_height="wrap_content" 
android:layout_below="@+id/SaveInfoTXT" 
android:layout_width="fill_parent" 
android:id="@+id/SaveBTN" 
android:text="@string/save"/>
</RelativeLayout>
</ScrollView>